AC_INIT([noidea],[1.0])
AC_PREREQ([2.5.9])
AM_INIT_AUTOMAKE
AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX
AC_PROG_CPP
AC_PROG_INSTALL
AM_PROG_LIBTOOL

API_INCLUDE_DIR=
LAMMPS_SRC_DIR=
LAMMPS_LIB=
LAMMPS_INSTALL_DIR="."
JAVA_INSTALL_DIR=
USER_INCLUDES=

case $host in
  *-*-linux*)
    LIBFLAG="-shared"
    CXXFLAGS="$CXXFLAGS -O1 -v"
    ;;
  *-apple-darwin*)
    LIBFLAG="-dynamiclib -arch $host_cpu -framework JavaVM -undefined dynamic_lookup"
    CXXFLAGS="$CXXFLAGS -O1 -v"
    AC_ARG_WITH(jni-install,
    [  --with-jni-install=dir  Location of the Java installation directory(which will contain a Header directory)],
      JAVA_INSTALL_DIR=$withval)
    if test ! -d "$JAVA_INSTALL_DIR"; then
      AC_MSG_ERROR([Must use the --with-jni-install directive with
      a valid directory.])
    fi
    USER_INCLUDES="$USER_INCLUDES -I$JAVA_INSTALL_DIR/Headers"
    ;;
esac

AC_ARG_WITH(api-include,
[  --with-api-include=dir  Location of the C++ include files],
  API_INCLUDE_DIR=$withval)
if test ! -d "$API_INCLUDE_DIR"; then
  AC_MSG_ERROR([Must use the --with-api-include directive with
a valid directory.])
fi
USER_INCLUDES="$USER_INCLUDES -I$API_INCLUDE_DIR"

AC_ARG_WITH(lammps-install,
[  --with-lammps-install=dir  Location of the Lammps source directory],
  LAMMPS_SRC_DIR=$withval)
if test ! -d "$LAMMPS_SRC_DIR"; then
  AC_MSG_ERROR([Must use the --with-lammps-install directive with
a valid directory.])
fi
USER_INCLUDES="$USER_INCLUDES -I$LAMMPS_SRC_DIR"

AC_ARG_WITH(lammps-lib,
[  --with-lammps-lib=dir  Name of the lammps shared object library],
  LAMMPS_LIB=$withval)
if test !  "lib$LAMMPS_LIB.so"; then
  AC_MSG_ERROR([Must use the --with-lammps-lib directive with
a valid library name.])
fi
LAMMPS_LIB="-L$LAMMPS_SRC_DIR -l$LAMMPS_LIB"

AC_ARG_WITH(install-dir,
[  --with-install=dir  Location to install lammps adapter library],
  LAMMPS_INSTALL_DIR=$withval)

echo "INSTALL DIR : $LAMMPS_INSTALL_DIR"

AC_SUBST(USER_INCLUDES)
AC_SUBST(LAMMPS_LIB)
AC_SUBST(LIBFLAG)
AC_SUBST(LAMMPS_INSTALL_DIR)

AC_PREFIX_DEFAULT([${PWD}])
AC_CONFIG_FILES([
Makefile
src/Makefile
src/Glue/Makefile
])
AC_OUTPUT


